<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/odsbackgroundscreen"
    tools:context=".Login.LoginActivity">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:background="@drawable/loginlogo"
        android:contentDescription="@string/logo"
        tools:ignore="ContentDescription" />


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginStart="25dp"
        android:text="@string/loginActivity_usernameTV"/>

    <EditText
        android:id="@+id/usernameET"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:layout_toEndOf="@+id/textView2"
        android:hint="@string/loginActivity_usernameET"
        android:inputType="textEmailAddress"
        android:layout_centerVertical="true"
        tools:ignore="Autofill" />


    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_alignBaseline="@+id/passwordET"
        android:text="@string/loginActivity_passwordTV"
         android:layout_below="@+id/textView"
        />

    <EditText
        android:id="@+id/passwordET"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:inputType="textPassword"
        android:layout_below="@+id/usernameET"
        android:layout_toEndOf="@+id/textView2"
        tools:ignore="Autofill,LabelFor,hint" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:text="@string/loginActivity_forgetTV"
        android:onClick="reset"
        android:layout_marginStart="25dp"
        android:layout_below="@+id/textView2"
    />

    <Button
        android:id="@+id/button"
        android:layout_width="210dp"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        android:onClick="login"
        android:layout_below="@+id/textView3"
        android:layout_centerHorizontal="true"
        android:text="@string/loginActivity_loginBTN" />

    <com.facebook.login.widget.LoginButton
        android:id="@+id/buttonFacebookLogin"
        android:layout_width="210dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/button" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/loginActivity_signUpBTN"
        android:onClick="signUp"
android:layout_alignParentBottom="true"       />


    <ProgressBar
        android:id="@+id/progressBar"
        style="@style/AppTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
       android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>