<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/fragment_product">


    <ImageView
        android:id="@+id/productImage"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:fitsSystemWindows="true"
        android:scaleType="fitXY"
        android:src="@drawable/header"
        android:contentDescription="@string/todo" />



    <LinearLayout
        android:id="@+id/headerIcons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="8dp"
        android:layout_below="@+id/productImage"
        android:weightSum="4">


            <TextView
                android:id="@+id/like_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/like"
                android:textSize="12sp"
                android:textColor="@color/gen_black"
                android:gravity="center_vertical|center_horizontal"
                android:layout_weight="1"
                android:drawableStart="@drawable/ic_thumb_up_grey_700_24dp"/>

        <View android:layout_width="@dimen/view_width_small"
            android:layout_height="match_parent"
            android:background="@color/grey_light"/>


            <TextView
                android:id="@+id/comment_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/comment"
                android:textSize="12sp"
                android:textColor="@color/gen_black"
                android:gravity="center_vertical|center_horizontal"
                android:layout_weight="1"
                android:drawableStart="@drawable/ic_mode_comment_blue_700_24dp"/>

        <View android:layout_width="@dimen/view_width_small"
            android:layout_height="match_parent"
            android:background="@color/grey_light"/>



            <TextView android:id="@+id/share_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="8dp"
                android:text="share"
                android:textSize="12sp"
                android:textColor="@color/gen_black"
                android:gravity="center_vertical|center_horizontal"
                android:drawableStart="@drawable/ic_share_blue_a700_24dp"/>


        <View android:layout_width="@dimen/view_width_small"
            android:layout_height="match_parent"
            android:background="@color/grey_light"/>



            <TextView android:id="@+id/addToCart_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="8dp"
                android:text="@string/add_to_cart"
                android:textSize="12sp"
                android:textColor="@color/gen_black"
                android:gravity="center_vertical|center_horizontal"
                android:drawableStart="@drawable/ic_add_shopping_cart_blue_700_24dp"/>


    </LinearLayout>


    <LinearLayout
        android:id="@+id/productTitleLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"

        android:layout_below="@+id/headerIcons"
        android:layout_margin="16dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/productTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Denim Shirt"
                android:textSize="16sp"
                android:textColor="@color/gen_black"/>
            <TextView
                android:id="@+id/productPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/price"
                android:textSize="20sp"
                android:textColor="@color/gen_black"
                />
            <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/free_delivery"
                android:textSize="12sp"
                android:layout_marginTop="4dp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/productTitleLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal">

        <Button
            android:id="@+id/decrementQuantity_btn"
            android:layout_width="48dp"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:backgroundTint="#eeeeee"
            android:text="@string/minus"
            />

        <EditText
            android:id="@+id/quantityProductPage"
            android:layout_width="40dp"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:inputType="number"
            android:hint="@string/_1"
            android:focusableInTouchMode="true"
            android:autofillHints="1"
            tools:text="1"/>

        <Button
            android:id="@+id/incrementQuantity_btn"
            android:layout_width="48dp"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:backgroundTint="#eeeeee"
            android:text="@string/plus" />
    </LinearLayout>

    </LinearLayout>

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="@dimen/view_width_small"
        android:layout_below="@+id/productTitleLayout"
        android:background="@color/grey_light"
        android:layout_marginTop="8dp"/>

    <LinearLayout
        android:id="@+id/descLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/divider"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingStart="@dimen/activity_horizontal_margin"
        android:paddingEnd="@dimen/activity_horizontal_margin"
        android:orientation="vertical">
        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/details"
            android:textSize="16sp"
            android:textColor="@color/gen_black"/>
        <TextView
            android:id="@+id/productDesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="\u2022 Regular fit, full sleeve"
            android:textSize="12sp"
            android:textColor="@color/gen_black"/>

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/mRecycler"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/descLayout">

    </androidx.recyclerview.widget.RecyclerView>


</RelativeLayout>